fix: Improve spacing of sections of the UX

--- a/src/App.css
+++ b/src/App.css
@@ -363,11 +363,11 @@ main {
   }
 
   .app-container {
-    gap: 3vh;
+    gap: 5vh;
   }
 
   main {
-    gap: 3vh;
+    gap: 6vh;
   }
 
   .currentContainer {
